test-expected/large/appregistry/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: appregistry
    foo.com/duversion: 1.9.396-20190925.1569389375690
    foo.com/version: 1.9.396
  labels:
    app.kubernetes.io/name: appregistry
    helm.sh/chart: appregistry-1.9.396
  name: appregistry
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /appRegistry
    - uri:
        prefix: /appRegistry/
    route:
    - destination:
        host: appregistry.peekay.svc.cluster.local
